# dp

./: .dpignore  .gitignore  README.md  ai_prompter.sqlite  dp_sources.txt  gitpack.sh  imgui.ini  lang.sql  macos.ini  meson.build  native.ini
.github/workflows/: build.yml
app/: main.cpp
config/: imconfig.h
gui/: AppState.h  ConfigManager.cpp  ConfigManager.h  DatabaseManager.cpp  DatabaseManager.h  I18nManager.cpp  I18nManager.h  Themes.cpp  Themes.h  main.cpp
include/dirpacker/: dirpacker.h
src/: dirpacker.cpp  main.cpp
subprojects/SDL/: configure
subprojects/SDL/include/: SDL_config.h  SDL_revision.h
subprojects/SDL/test/: configure
subprojects/blake3/: meson.build
subprojects/cppcodec/: meson.build  stbrumme-hash-library.wrap
subprojects/hash_library/: meson.build  sha1.cpp  sha256.cpp  sha3.cpp
subprojects/imgui/: meson.build
subprojects/sqlite3/: meson.build
subprojects/sqlitecpp/: meson.build
